--- a/views/theme/css/principal.css
+++ b/views/theme/css/principal.css
@@ -5,7 +5,7 @@
 	height:auto;
 	margin-top:5%;
 	padding:5%;
-	border:solid 5px #325EAB;
-	color:#325EAB;
+	border:solid 5px #3BAFA4;
+	color:#3BAFA4;
 	font-size:26pt;
 }
