--- a/views/theme/css/general.css
+++ b/views/theme/css/general.css
@@ -30,9 +30,9 @@ a{
 }
 
 header{
-	background-color: black;
+	background-color: #3BAFA4;
 	box-sizing: border-box;
-	color: #7D7D7D;
+	color: rgb(255, 255, 255);
 	display: flex;
 	padding: 0px 15px;
 	width: 100%;
@@ -84,7 +84,7 @@ header{
 }
 .nav-menuItem a:hover,
 .nav-userMenu:hover{
-	background: #66C5E1;
+	background: #BEBEBF;
 }
 .nav-userMenu{
 	color: white;
@@ -116,7 +116,7 @@ header{
 	padding: 10px;
 }
 .nav-desplegableItem a:hover{
-	background: #66C5E1;
+	background: #3BAFA4;
 	color: white;
 }
 
@@ -142,11 +142,11 @@ header{
 	height: 40px;
 }
 .mobile-btn:hover{
-	border: solid 1px #4D8CF4;
+	border: solid 1px #3BAFA4;
 }
 .mobile-menu{
 	position: absolute;
-	background: #272822;
+	background: #3BAFA4;
 	top: 60px;
 	margin: 0px;
 	margin-left: -15px;
@@ -162,11 +162,11 @@ header{
 }
 .mobile-menuBtn{
 	height: 30px;
-	border-top: solid 1px #66D9EF;
+	border-top: solid 1px #3BAFA4;
 }
 .mobile-desplegableMenu{
 	background: white;
-	border: solid 1px #BEBEBF;
+	border: solid 1px white;
 	display: none;
 	list-style: none;
 	margin: 0px;
@@ -184,7 +184,7 @@ header{
 }
 
 .title-page{
-	background: #8CE4F7;
+	background: #3BAFA4;
 	border-radius: 10px;
 	display: flex;
 	align-items: center;
@@ -195,6 +195,7 @@ header{
 	width: 100%;
 	min-height: 60px;
 	height: auto;
+	color:white;
 }
 
 .head-page{
@@ -202,9 +203,10 @@ header{
 	display: flex;
 	width: 90%;
 	height: auto;	
-	background-color: #F9F9FA;
-	border: solid 1px #0A84FF;
-	border-radius: 10px;
+	background-color: #FFFFFF;
+	
+	
+	
 	margin: 30px auto;
 	padding: 15px;
 }
@@ -217,9 +219,9 @@ header{
 }
 .img-headPage{
 	background: white;
-	border: solid 5px #0A84FF;
+	border: solid 5px #3BAFA4;
 	border-radius: 50%;
-	color: #0A84FF;
+	color: #3BAFA4;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -233,7 +235,7 @@ header{
 	flex-basis: 50%;
 }
 .head-pageTitle{
-	color: #0A84FF;
+	color: #3BAFA4;
 	display: flex;
 	align-items: center;
 	font-size: 250%;
@@ -242,7 +244,7 @@ header{
 	height:auto;
 }
 .head-pageSearchFormWrap{
-	display: flex;
+	
 	justify-content: flex-end;
 	flex-basis: 100%;
 	height: 100%;
@@ -313,8 +315,8 @@ table .thDer{
 	border-top-right-radius:5px;
 }
 table th{
-	background-color: #272822;
-	color: #F9F9FA;
+	background-color: #3BAFA4;
+	color: rgb(255, 255, 255);
 	border:none;
 	height:30px;
 	border: 1px solid #BCBCBC;
@@ -419,7 +421,7 @@ table .tdDer{
 	height:auto;
 }
 .header-form{
-	background-color:#509AD0;
+	background-color:#3BAFA4;
 	border-top-right-radius: 0px;
 	border-top-left-radius: 5px;
 	box-sizing: border-box;
@@ -469,7 +471,7 @@ table .tdDer{
 	text-align: right;
 }
 .action-formBtn, .close-formBtn{
-	background-color:#2D65D5;
+	background-color:#3BAFA4;
 	border: white;
 	color:white;
 	cursor:pointer;
@@ -544,7 +546,7 @@ select{
 /*Estilos generales*/
 .btnGen{
 	padding:2%;
-	background-color:#658AE3;
+	background-color:#3BAFA4;
 	color:black;
 	border-radius:5px;
 }
