--- a/views/theme/css/index.css
+++ b/views/theme/css/index.css
@@ -1,7 +1,7 @@
 .login-title{
-	background: #4B8BF4;
+	background: #3BAFA4;
 	color: white;
-	font-size: 300%;
+	font-size: 100%;
 	margin: 0px;
 	padding: 10px;
 }
@@ -43,7 +43,7 @@
 .form-loginControl{
 	border: solid 1px #BEBEBF;
 	box-sizing: border-box;
-	color: grey;
+	color:#757575;
 	font-size: 130%;
 	font-weight: normal;
 	margin-top: 10px;
@@ -57,7 +57,7 @@
 	padding: 0px;
 }
 .login-btn{
-	background: #4B8BF4;
+	background: #3BAFA4;
 	width: 100%;
 	height: 40px;
 }
